# in-the-bush

./: CLAUDE.md  Makefile  README.md  docker-compose.yml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css  types.ts  useWebSocket.ts
client/src/components/: CardDisplay.tsx  GameBoard.tsx  Lobby.tsx  WaitingRoom.tsx
client/src/components/3d/: AlibiCard.tsx  DiscovererMarker.tsx  PlayerChips.tsx  SuspectCard.tsx  Table.tsx  TableScene.tsx  VictimCard.tsx
server/: Cargo.toml  Dockerfile
server/src/: game.rs  main.rs  room.rs  ws.rs
